# budget-king-api

./: .env.example  go.mod  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_14_2121-b95bb5f4f392_create_users_table.py  2024_04_15_2124-0821b468aaf2_create_category_table.py  2024_04_16_1548-73531072056b_add_user_id_column_in_categories.py  2024_04_17_2209-331e816ac346_create_interval_table.py  2024_04_18_1423-aeb5a1c9daf9_add_intervals.py  2024_04_19_1009-092c452c0d7b_add_periods.py  2024_04_19_1024-b788d862ddb9_add_records_table.py  2024_04_19_2131-e0cb5aeddcd9_add_interval_id_column_in_period_table.py  2024_04_19_2142-5ed75c69b5bf_add_current_interval_column_in_users_.py  2024_06_10_1537-da6ad32256a1_update_record_model.py  2024_06_10_1548-8299b061888c_add_planning_table.py  2024_06_11_1742-13ccb771f425_fix_amount_field_in_records_and_.py  2024_06_12_1706-11ecf15a72b3_substitute_period_with_date_in_records.py
api_v1/: __init__.py
api_v1/categories/: crud.py  dependencies.py  schemas.py  views.py
api_v1/planning/: crud.py  schemas.py
api_v1/records/: crud.py  schemas.py  views.py
api_v1/users/: crud.py  schemas.py  views.py
cmd/budget-king/: main.go
core/: config.py  utils.py
core/models/: __init__.py  category.py  db_helper.py  interval.py  period.py  planning.py  record.py  user.py
internal/config/: config.go
